fix(infra): resolve boot failures and synchronize facade contracts
- Created NetworkConfig to provide RestClient.Builder and HttpClient (Virtual Threads).
- Fixed IMenuFacade contract and implementation to match MenuController requirements.
- Implemented DocumentoStorageResolver with SHA-256 integrity and date-based partitioning.
- Refactored UpdateClient and GitHubReleaseDTO for correct Jackson snake_case mapping.
- Added full TDD coverage for SecurityConfig, PlaybookResolver, UpdateClient, and ViaCepClient.
- Integrated Project Loom (Virtual Threads) into the native HttpClient transport.

Tech: Java 25, Spring Boot 4.0.6, Project Loom.
Closes: UnsatisfiedDependencyException in MenuController.